// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Previous & Next should match snapshot with both links supplied 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="prev-next"
        data-component="prev-next"
      >
        <nav
          aria-label="Previous and next pages"
        >
          <a
            href="#"
          >
            I am a link
          </a>
          <a
            class="prev-next__link"
            href="/alert"
          >
            <span
              class="prev-next__link-intro"
            >
              Previous page
            </span>
            <span
              class="prev-next__link-text"
            >
              Alert
            </span>
          </a>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="prev-next"
      data-component="prev-next"
    >
      <nav
        aria-label="Previous and next pages"
      >
        <a
          href="#"
        >
          I am a link
        </a>
        <a
          class="prev-next__link"
          href="/alert"
        >
          <span
            class="prev-next__link-intro"
          >
            Previous page
          </span>
          <span
            class="prev-next__link-text"
          >
            Alert
          </span>
        </a>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Previous & Next should match snapshot with one link supplied 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="prev-next"
        data-component="prev-next"
      >
        <nav
          aria-label="Previous and next pages"
        >
          <a
            class="prev-next__link"
            href="/alert"
          >
            <span
              class="prev-next__link-intro"
            >
              Previous page
            </span>
            <span
              class="prev-next__link-text"
            >
              Alert
            </span>
          </a>
        </nav>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="prev-next"
      data-component="prev-next"
    >
      <nav
        aria-label="Previous and next pages"
      >
        <a
          class="prev-next__link"
          href="/alert"
        >
          <span
            class="prev-next__link-intro"
          >
            Previous page
          </span>
          <span
            class="prev-next__link-text"
          >
            Alert
          </span>
        </a>
      </nav>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
